Fix text-wrapping issue

--- a/style.sass
+++ b/style.sass
@@ -107,7 +107,6 @@ code
     font-family: 'Cabin'
 
   .spacetime 
-    margin-top: 2.5pt
     float: right
     .when::before  
       content: '\f073' 
